Fix: Reemplazo de Cors wildcard (*) por dominios permitidos en CocheraController